#
# Copyright (c) 2018 Dell Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
#
# THIS CODE IS PROVIDED ON AN *AS IS* BASIS, WITHOUT WARRANTIES OR
# CONDITIONS OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT
# LIMITATION ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS
# FOR A PARTICULAR PURPOSE, MERCHANTABLITY OR NON-INFRINGEMENT.
#
# See the Apache Version 2.0 License for specific language governing
# permissions and limitations under the License.
#

#All exported headers
nobase_include_HEADERS= opx/cps_api_interface_types.h  opx/db_linux_event_register.h  opx/ds_api_linux_route.h  opx/nas_os_l3.h opx/net_publish.h opx/cps_api_route.h opx/ds_api_linux_interface.h opx/nas_linux_l2.h opx/nas_os_lag.h opx/db_api_linux_init.h  opx/ds_api_linux_neigh.h opx/nas_os_interface.h opx/nas_os_vlan.h opx/nas_os_mcast_snoop.h opx/nas_os_vxlan.h opx/private/nas_os_l3_utils.h opx/private/os_interface_cache_utils.h

